--- a/OrnaLibs.Application.csproj
+++ b/OrnaLibs.Application.csproj
@@ -30,4 +30,9 @@
 		<CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
+	  <PackageReference Include="System.Text.Json" Version="9.0.1" />
+	</ItemGroup>
+
 </Project>
